syntax = "proto3";

package blog;

import "google/protobuf/empty.proto";

message Blog {
    string id = 1;
    string author_id = 2;
    string content = 3;
    string title = 4;
}

message BlogId {
    string id = 1;
}

service BlogService {
    rpc CreateBlog (Blog) returns (BlogId);
    rpc ReadBlog (BlogId) returns (Blog);
    rpc UpdateBlog (Blog) returns (google.protobuf.Empty);
    rpc DeleteBlog (BlogId) returns (google.protobuf.Empty);
    rpc ListBlog (google.protobuf.Empty) returns (stream Blog);
}